Fix scrollbar issue with paging details

--- a/static/global.css
+++ b/static/global.css
@@ -54,6 +54,7 @@ div, span {
 /* Main Content */
 .main-content {
   width: 100%;
+  overflow-x: hidden;
 }
 
 .main-content.fixed-height {
